# flatdata

./: .buildinfo  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  README.md  building-archives.html  conanfile.py  generator  genindex.html  index.html  inspector  lgtm.yml  library-layout.html  objects.inv  py-modindex.html  quick-start.html  rustfmt.toml  schema-language.html  search.html  searchindex.js  why-flatdata.html  writer
docs/: CMakeLists.txt  conf.py.in  reference.md  schema-language.md  why-flatdata.md
docs/src/: index.rst  library-layout.rst  schema-language.rst  why-flatdata.rst
docs/src/developer-documentation/: generator-architecture.rst
docs/src/flatdata-py/: index.rst
examples/: CMakeLists.txt  README.md  binary_layout.cpp  binary_layout.flatdata  coappearances.cpp  coappearances.flatdata  fibonacci.flatdata  graph.flatdata  karenina.json  read_archive.rs  read_coappearances.rs  read_graph.rs
examples/coappearances/: coappearances.cpp  coappearances.flatdata  karenina.json  mod.rs
examples/coappearances/karenina.archive/: Graph.archive.schema  edges.schema  meta.schema  strings  strings.schema  vertices.schema  vertices_data
examples/graph/: mod.rs
examples/graph.flatdata/: Graph.archive.schema  edge_attributes  edge_attributes.schema  edge_attributes_index  edge_attributes_index.schema  edges  edges.schema  vertices  vertices.schema
flatdata-cpp/: CMakeLists.txt  README.md  index.html
flatdata-cpp/benchmark/: BreadthFirstSearch.h  CMakeLists.txt  Dijkstra.h  FlatdataGraph.h  GraphGenerator.h  Lookup.h  Printer.h  StructGraph.h  graph.flatdata  main.cpp  run.py
flatdata-cpp/ci/: Dockerfile  build-and-test-cpp.sh
flatdata-cpp/cmake/flatdata/: GenerateSource.cmake
flatdata-cpp/examples/: CMakeLists.txt  fibonacci.cpp  graph.cpp
flatdata-cpp/examples/coappearances/: coappearances.cpp  picojson.h
flatdata-cpp/include/flatdata/: Archive.h  ArchiveBuilder.h  ArrayView.h  Bitset.h  BitsetView.h  Copy.h  DebugDataAccessStatistics.h  ExternalBitset.h  ExternalVector.h  FileResourceStorage.h  Hash.h  MemoryDescriptor.h  MemoryMappedFileStorage.h  MemoryMappedTarFileStorage.h  MemoryResourceStorage.h  MultiArrayView.h  MultiVector.h  ResourceStorage.h  Struct.h  TarArchiveResourceStorage.h  TarFileResourceStorage.h  Vector.h  flatdata.h
flatdata-cpp/include/flatdata/internal/: ArchiveUtils.h  ArrayView.inl  ArrayViewIterator.h  ArrayViewIterator.inl  BitHelpers.h  BitsetView.inl  BitsetViewIterator.h  Constants.h  MultiArrayViewImpl.h  Reader.h  ResourceHandle.h  ResourceStorage.inl  ResourceStorageCommon.h  SchemaUtils.h  TarReader.h  Writer.h
flatdata-cpp/src/: Archive.cpp  ArchiveBuilder.cpp  ResourceStorage.cpp  SchemaUtils.no-re2c.cpp  SchemaUtils.re2c.cpp  TarReader.cpp
flatdata-cpp/test/: ArrayViewTest.cpp  BackwardCompatibilityTest.cpp  BitsetTest.cpp  CMakeLists.txt  EnumTest.cpp  EternalBitsetTest.cpp  ExternalVectorTest.cpp  FuncTraitsTest.cpp  GeneratedArchiveTest.cpp  ImportTest.cpp  MultiVectorTest.cpp  ResourceStorageTest.cpp  SchemaUtilsTest.cpp  SerializedStructTest.cpp  StaticListTest.cpp  StructTest.cpp  TarReaderTest.cpp  VectorTest.cpp  WriterReaderTest.cpp  main.cpp  test_structures.flatdata  test_structures2.flatdata
flatdata-generator/: .pylintrc  README.md  generate.py  generator.py  pyproject.toml  requirements.txt  setup.py
flatdata-generator/flatdata/generator/: app.py  engine.py  grammar.py
flatdata-generator/tests/: test_engine.py
flatdata-generator/tests/generators/: assertions.py  schemas.py  test_cpp_generator.py  test_dot_generator.py  test_flatdata_generator.py  test_go_generator.py  test_import_generators.py  test_python_generator.py  test_rust_generator.py
flatdata-generator/tests/tree/: test_importer.py  test_multi_file_builder.py  test_node.py  test_node_tree_builder.py  test_references.py  test_resolver.py  test_schema_resolution.py  test_syntax_tree.py  test_syntax_tree_builder.py
flatdata-py/: README.md  flatdata.html  flatdata_writer.py  generate.py  index.html  inspector.py  modules.html  pyproject.toml  requirements.txt  setup.py  writer.py
flatdata-py/flatdata/: archive.py  data_access.py  errors.py  file_resource_storage.py  generator  inspector.py  resources.py  structure.py
flatdata-py/flatdata/lib/: __init__.py  archive.py  archive_builder.py  data_access.py  errors.py  file_resource_storage.py  file_resource_writer.py  flatdata_writer.py  inspector.py  resource_storage.py  resources.py  structure.py  tar_archive_resource_storage.py  writer.py
flatdata-py/generator/: README.md  app.py  engine.py  grammar.py
flatdata-py/generator/generators/: BaseGenerator.py  CppGenerator.py  GoGenerator.py  RaiseExtension.py  RustGenerator.py  __init__.py  cpp.py  dot.py  flatdata.py  go.py  python.py  rust.py
flatdata-py/generator/tree/: builder.py  errors.py  resolver.py  syntax_tree.py  traversal.py
flatdata-py/tests/: __init__.py  common.py  common_testing_data.py  dict_resource_storage.py  test_archive_creation.py  test_archive_validation.py  test_backward_compatibility.py  test_data_access.py  test_tar_resource_storage.py  test_vectorized_access.py  test_writer_imports.py
flatdata-py/tools/: inline.py  inspect_flatdata.py
flatdata-rs/: .travis.yml  Cargo.toml  README.md  rustfmt.toml
flatdata-rs/ci/: coverage.sh
flatdata-rs/lib/: Cargo.toml  build.rs
flatdata-rs/lib/src/: archive.rs  arrayview.rs  bytereader.rs  bytewriter.rs  error.rs  filestorage.rs  generator.rs  helper.rs  lib.rs  memory.rs  memstorage.rs  multiarrayview.rs  multivector.rs  rawdata.rs  storage.rs  structbuf.rs  structs.rs  tarstorage.rs  vector.rs
flatdata-rs/src/: archive.rs  arrayview.rs  memstorage.rs  multiarrayview.rs  multivector.rs  storage.rs  structbuf.rs  vector.rs
flatdata-rs/test_cases/: Cargo.toml  build.rs
flatdata-rs/tests/: coappearances_test.rs
flatdata-rs/tests/coappearances/: Cargo.toml  build.rs  generated.rs  mod.rs
flatdata-rs/tests/features/: Cargo.toml  build.rs
flatdata-rs/tests/imports/: Cargo.toml  build.rs
(+628 files in other folders)
