[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flatdata-py"
version = "0.4.11"
description = "Python 3 implementation of Flatdata"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flatdata Developers" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "flatdata-generator==0.4.11",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
inspector = [
    "IPython",
]

[project.scripts]
flatdata-inspector = "flatdata.lib.inspector:main[inspector]"
flatdata-writer = "flatdata.lib.writer:main[writer]"

[project.urls]
Homepage = "https://github.com/heremaps/flatdata"

[tool.hatch.build.targets.sdist]
include = [
    "/flatdata",
]

[tool.hatch.build.targets.wheel]
packages = ["flatdata"]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = [ "test_*.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]

[tool.mypy]
python_version = "3.10"
namespace_packages = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true
