[package]
name = "flatdata"
version = "0.5.1"
authors = ["boxdot <d@zerovolt.org>", "Christian Vetter <veaac.fdirct@gmail.com>", "Gabriel Féron <feron.gabriel@gmail.com>"]
license = "Apache-2.0"
description = "Rust implementation of flatdata"
repository = "https://github.com/heremaps/flatdata"
keywords = ["serialization", "flatdata", "mmap"]
categories = ["encoding"]
readme = "../README.md"
edition = "2018"

[dependencies]
diff = "0.1.11"
memmap2 = "0.2.0"
walkdir = "2.2.9"
