[package]
name = "flatdata"
version = "0.5.3"
authors = ["boxdot <d@zerovolt.org>", "Christian Vetter <veaac.fdirct@gmail.com>", "Gabriel Féron <feron.gabriel@gmail.com>"]
license = "Apache-2.0"
description = "Rust implementation of flatdata"
repository = "https://github.com/heremaps/flatdata"
keywords = ["serialization", "flatdata", "mmap"]
categories = ["encoding"]
readme = "../README.md"
edition = "2018"

[dependencies]
diff = "0.1.11"
memmap2 = "0.2.0"
tar = { version = "0.4.38", optional = true }
walkdir = "2.2.9"

[package.metadata.docs.rs]
all-features = true
